<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_weight="0.50"
        android:gravity="center_horizontal" >

        <Space
            android:id="@+id/Space1"
            android:layout_width="47dp"
            android:layout_height="1dp"
            android:layout_column="2"
            android:layout_row="0" />

        <Space
            android:id="@+id/Space2"
            android:layout_width="123dp"
            android:layout_height="1dp"
            android:layout_column="3"
            android:layout_row="0" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.50"
            android:clickable="true"
            android:src="@drawable/light_navigation_back" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.50"
            android:src="@drawable/light_not_favorite" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.50"
            android:clickable="true"
            android:src="@drawable/light_favorite" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/Space2"
            android:clickable="true"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:src="@drawable/light_location_web_site" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/posterLoadMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Loading Image..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:src="@drawable/ic_launcher"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/triviaProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/xhrxmin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/mpaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/runtime"
            android:layout_alignBottom="@+id/runtime"
            android:layout_centerHorizontal="true"
            android:text="@string/mpaa"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/runtime"
            android:layout_alignBottom="@+id/runtime"
            android:layout_alignParentLeft="true"
            android:text="@string/mmddyyyy"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout3"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="23dp" >

        <TextView
            android:id="@+id/audience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="42dp"
            android:text="@string/audience"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/critics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="57dp"
            android:text="@string/critics"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout5" >

        <ImageView
            android:id="@+id/criticsRating"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:src="@drawable/certified_fresh" />

        <TextView
            android:id="@+id/audiencePerecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="19dp"
            android:text="@string/fifpercent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/audienceRating"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@+id/audiencePerecent"
            android:src="@drawable/certified_fresh" />

        <TextView
            android:id="@+id/criticsPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/audiencePerecent"
            android:layout_alignBottom="@+id/audiencePerecent"
            android:layout_marginRight="19dp"
            android:layout_toLeftOf="@+id/criticsRating"
            android:text="@string/fifpercent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout3"
        android:layout_marginRight="22dp" >

    </RelativeLayout>

</RelativeLayout>